--- a/.settings/com.appcelerator.titanium.ios.core.prefs
+++ b/.settings/com.appcelerator.titanium.ios.core.prefs
@@ -2,7 +2,7 @@ eclipse.preferences.version=1
 iosLaunchConfigurationAttributes/ATTR_MINIFY=true
 iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=Loycard Scanner
 iosLaunchConfigurationAttributes/appid=com.softvalleysolutions.scanner
-iosLaunchConfigurationAttributes/certificate=Motiur Rahman (66RG4YG5H9)
+iosLaunchConfigurationAttributes/certificate=Motiur Rahman (YRDJ7X84S2)
 iosLaunchConfigurationAttributes/keychain=
 iosLaunchConfigurationAttributes/sdk_version=10.2
-iosLaunchConfigurationAttributes/uuid=e1b11b76-5b22-4c1a-9b47-70a469f5c55e
+iosLaunchConfigurationAttributes/uuid=6f6629d2-ecb5-439c-a600-5ae07b47a191
